added era_diff and corr

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 268,
    "id": "9c576a8f",
    "metadata": {},
    "outputs": [],
@@ -96,13 +96,22 @@
     "\n",
     "    tmp = team_games.pivot(columns='team', values='won', index='game_num').cumsum()\n",
     "    team_wins = tmp.divide(tmp.index.values, axis='rows').unstack().rename('win_pct')\n",
-    "    team_avg_score_for = team_games.pivot(columns='team', values='score_for', index='game_num').expanding().mean().unstack().rename('avg_score_for')\n",
-    "    team_avg_score_against = team_games.pivot(columns='team', values='score_against', index='game_num').expanding().mean().unstack().rename('avg_score_against')\n",
+    "\n",
+    "    team_runs_for = team_games.pivot(columns='team', values='score_for', index='game_num').cumsum().unstack()\n",
+    "    team_avg_score_for = (team_runs_for / team_runs_for.index.get_level_values(1) - 1).rename('avg_score_for')\n",
+    "\n",
+    "    team_runs_against = team_games.pivot(columns='team', values='score_against', index='game_num').cumsum().unstack()\n",
+    "    team_avg_score_against = (team_runs_against / team_runs_against.index.get_level_values(1) - 1).rename('avg_score_against')\n",
+    "\n",
+    "    team_era = (team_runs_against / (team_runs_against.index.get_level_values(1) - 1)).rename('era')\n",
+    "\n",
     "    team_pythag = ((team_avg_score_for * (team_avg_score_for.index.get_level_values(1) - 1))**1.83 / (\n",
     "        (team_avg_score_for * (team_avg_score_for.index.get_level_values(1) - 1))**1.83\n",
     "        + (team_avg_score_against * (team_avg_score_against.index.get_level_values(1) - 1))**1.83\n",
     "    )).rename('pythag')\n",
-    "    team_stats = pd.concat([team_wins, team_avg_score_for, team_avg_score_against, team_pythag], axis='columns').reset_index()\n",
+    "    team_stats = pd.concat([\n",
+    "        team_wins, team_avg_score_for, team_avg_score_against, team_pythag, team_era\n",
+    "    ], axis='columns').reset_index()\n",
     "\n",
     "    tmp = pd.merge(\n",
     "        one_year[['date', 'home_team', 'away_team', 'home_team_game_num', 'away_team_game_num', 'home_won']],\n",
@@ -115,28 +124,31 @@
     "        on=['away_team', 'away_team_game_num']\n",
     "    ).sort_values(['date', 'home_team_game_num'])\n",
     "\n",
-    "    games['log5'] = (games['home_team_win_pct'] - (games['home_team_win_pct'] * games['away_team_win_pct'])) / (\n",
+    "    games['log5'] = ((games['home_team_win_pct'] - (games['home_team_win_pct'] * games['away_team_win_pct'])) / (\n",
     "        games['home_team_win_pct'] + games['away_team_win_pct'] - (2 * games['home_team_win_pct'] * games['away_team_win_pct'])\n",
-    "    ).replace(0, 1)\n",
+    "    ).replace(0, 1)).astype(float)\n",
     "    games['pythag'] = games['home_team_pythag'] - games['away_team_pythag']\n",
     "\n",
-    "    games['pred_score_home'] = np.sqrt(games['home_team_avg_score_for'] * games['away_team_avg_score_against'])\n",
-    "    games['pred_score_away'] = np.sqrt(games['away_team_avg_score_for'] * games['home_team_avg_score_against'])\n",
-    "    games['pred_score_diff'] = games['pred_score_home'] - games['pred_score_away']\n",
+    "#     games['pred_score_home'] = np.sqrt(games['home_team_avg_score_for'] * games['away_team_avg_score_against'])\n",
+    "#     games['pred_score_away'] = np.sqrt(games['away_team_avg_score_for'] * games['home_team_avg_score_against'])\n",
+    "#     games['pred_score_diff'] = games['pred_score_home'] - games['pred_score_away']\n",
+    "    games['era_diff'] = games['home_team_era'] - games['away_team_era']   \n",
     "    return games[games['home_team_game_num'] > 10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
-   "id": "097d7ecb",
+   "execution_count": 273,
+   "id": "ddfc32ee",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_116/2342408760.py:12: SettingWithCopyWarning: \n",
+      "/home/mpark/.local/lib/python3.8/site-packages/pandas/core/arraylike.py:364: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n",
+      "/tmp/ipykernel_116/3459252499.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -147,10 +159,10 @@
     {
      "data": {
       "text/plain": [
-       "0.5579399141630901"
+       "0.5588511749347258"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,8 +172,8 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "games = pd.concat([build_features(year) for year in range(2000, 2020)], ignore_index=True)\n",
-    "features = ['log5', 'pythag', 'pred_score_diff']\n",
-    "train_size = 20000\n",
+    "features = ['log5', 'pythag', 'era_diff']\n",
+    "train_size = 5000\n",
     "\n",
     "model = LogisticRegression()\n",
     "model.fit(games.loc[:train_size, features], games.loc[:train_size, 'home_won'])\n",
@@ -169,6 +181,121 @@
     "train = games.loc[train_size + 1 : games.shape[0] + 1]\n",
     "train['pred'] = model.predict(train.loc[:,features])\n",
     "(train['pred'] == train['home_won']).sum() / train.shape[0] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "id": "b8c5586d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      13\n",
+       "1       6\n",
+       "2       7\n",
+       "3      13\n",
+       "4       7\n",
+       "       ..\n",
+       "893     6\n",
+       "894    10\n",
+       "895     9\n",
+       "896    11\n",
+       "897     7\n",
+       "Name: home_H, Length: 47057, dtype: int64"
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['home_H']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "id": "f9b9a79f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>log5</th>\n",
+       "      <th>pythag</th>\n",
+       "      <th>era_diff</th>\n",
+       "      <th>home_won</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>log5</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.876045</td>\n",
+       "      <td>-0.674564</td>\n",
+       "      <td>0.112530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pythag</th>\n",
+       "      <td>0.876045</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.738762</td>\n",
+       "      <td>0.120075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>era_diff</th>\n",
+       "      <td>-0.674564</td>\n",
+       "      <td>-0.738762</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.100312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_won</th>\n",
+       "      <td>0.112530</td>\n",
+       "      <td>0.120075</td>\n",
+       "      <td>-0.100312</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              log5    pythag  era_diff  home_won\n",
+       "log5      1.000000  0.876045 -0.674564  0.112530\n",
+       "pythag    0.876045  1.000000 -0.738762  0.120075\n",
+       "era_diff -0.674564 -0.738762  1.000000 -0.100312\n",
+       "home_won  0.112530  0.120075 -0.100312  1.000000"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games[features + ['home_won']].corr()"
    ]
   },
   {
