--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 292,
    "id": "212f5214",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,12 @@
     "    'date',\n",
     "    'series_game_num',\n",
     "    'dow',\n",
-    "    'away_team',\n",
-    "    'away_team_league',\n",
-    "    'away_team_game_num',\n",
-    "    'home_team',\n",
-    "    'home_team_league',\n",
-    "    'home_team_game_num',\n",
+    "    'away',\n",
+    "    'away_league',\n",
+    "    'away_game_num',\n",
+    "    'home',\n",
+    "    'home_league',\n",
+    "    'home_game_num',\n",
     "    'score_away',\n",
     "    'score_home',\n",
     "    'count_outs',\n",
@@ -69,12 +69,12 @@
     "    year_df = file_to_df(f'data/{fn}')\n",
     "    dfs.append(year_df)\n",
     "    \n",
-    "df = pd.concat(dfs).sort_values(['date', 'home_team_game_num'])"
+    "df = pd.concat(dfs).sort_values(['date', 'home_game_num', 'away_game_num'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 370,
    "id": "9c576a8f",
    "metadata": {},
    "outputs": [],
@@ -86,94 +86,73 @@
     "    for side in ['home', 'away']:\n",
     "        side_games = one_year.copy()\n",
     "        side_games['won'] = one_year['home_won'] if side == 'home' else ~one_year['home_won']\n",
-    "        side_games['team'] = one_year[f'{side}_team']\n",
-    "        side_games['game_num'] = one_year[f'{side}_team_game_num'] + 1 # win pct = pct before game_num, to avoid lookahead bias\n",
+    "        side_games['team'] = one_year[side]\n",
+    "        side_games['game_num'] = one_year[f'{side}_game_num'] + 1 # win pct = pct before game_num, to avoid lookahead bias\n",
     "        side_games['score_for'] = one_year[f'score_{side}']\n",
     "        side_games['score_against'] = one_year[f'score_{opposite_side(side)}']\n",
+    "        for stat in offensive_stats + defensive_stats + pitching_stats:\n",
+    "            side_games[stat] = one_year[f'{side}_{stat}']\n",
     "        side_games_dfs.append(side_games)\n",
     "\n",
     "    team_games = pd.concat(side_games_dfs).sort_values(['team', 'game_num'])\n",
+    "    stacked = {col: team_games.pivot(columns='team', values=col, index='game_num') for col in team_games.columns}\n",
+    "    game_num = stacked['won'].index.values - 1\n",
     "\n",
-    "    tmp = team_games.pivot(columns='team', values='won', index='game_num').cumsum()\n",
-    "    team_wins = tmp.divide(tmp.index.values, axis='rows').unstack().rename('win_pct')\n",
+    "    team_wins = stacked['won'].cumsum().divide(game_num, axis='rows').unstack().rename('win_pct')\n",
     "\n",
-    "    team_runs_for = team_games.pivot(columns='team', values='score_for', index='game_num').cumsum().unstack()\n",
-    "    team_avg_score_for = (team_runs_for / team_runs_for.index.get_level_values(1) - 1).rename('avg_score_for')\n",
+    "    team_runs_for = stacked['score_for'].cumsum()\n",
+    "    team_avg_score_for = team_runs_for.divide(game_num, axis='rows').unstack().rename('avg_score_for')\n",
     "\n",
-    "    team_runs_against = team_games.pivot(columns='team', values='score_against', index='game_num').cumsum().unstack()\n",
-    "    team_avg_score_against = (team_runs_against / team_runs_against.index.get_level_values(1) - 1).rename('avg_score_against')\n",
+    "    team_runs_against = stacked['score_against'].cumsum()\n",
+    "    team_avg_score_against = team_runs_against.divide(game_num, axis='rows').unstack().rename('avg_score_against')\n",
     "\n",
-    "    team_era = (team_runs_against / (team_runs_against.index.get_level_values(1) - 1)).rename('era')\n",
-    "\n",
-    "    team_pythag = ((team_avg_score_for * (team_avg_score_for.index.get_level_values(1) - 1))**1.83 / (\n",
-    "        (team_avg_score_for * (team_avg_score_for.index.get_level_values(1) - 1))**1.83\n",
-    "        + (team_avg_score_against * (team_avg_score_against.index.get_level_values(1) - 1))**1.83\n",
-    "    )).rename('pythag')\n",
+    "    team_era = team_runs_against.divide(game_num, axis='rows').unstack().rename('era')\n",
+    "    team_obp = ((stacked['H'].cumsum() + stacked['BB'].cumsum() + stacked['HBP'].cumsum()) / (\n",
+    "        stacked['AB'].cumsum() + stacked['BB'].cumsum() + stacked['HBP'].cumsum() + stacked['SAC_FLY'].cumsum())\n",
+    "    ).unstack().rename('obp')\n",
+    "    \n",
+    "    team_pythag = (team_runs_for**1.83 / (team_runs_for**1.83 + team_runs_against**1.83)).unstack().rename('pythag')\n",
     "    team_stats = pd.concat([\n",
-    "        team_wins, team_avg_score_for, team_avg_score_against, team_pythag, team_era\n",
+    "        team_wins, team_avg_score_for, team_avg_score_against, team_era, team_obp, team_pythag\n",
     "    ], axis='columns').reset_index()\n",
     "\n",
     "    tmp = pd.merge(\n",
-    "        one_year[['date', 'home_team', 'away_team', 'home_team_game_num', 'away_team_game_num', 'home_won']],\n",
-    "        team_stats.rename(columns={col: 'home_team' if col == 'team' else f'home_team_{col}' for col in team_stats.columns}),\n",
-    "        on=['home_team', 'home_team_game_num']\n",
+    "        one_year[['date', 'home', 'away', 'home_game_num', 'away_game_num', 'home_won']],\n",
+    "        team_stats.rename(columns={col: 'home' if col == 'team' else f'home_{col}' for col in team_stats.columns}),\n",
+    "        on=['home', 'home_game_num']\n",
     "    )\n",
     "    games = pd.merge(\n",
     "        tmp,\n",
-    "        team_stats.rename(columns={col: 'away_team' if col == 'team' else f'away_team_{col}' for col in team_stats.columns}),\n",
-    "        on=['away_team', 'away_team_game_num']\n",
-    "    ).sort_values(['date', 'home_team_game_num'])\n",
+    "        team_stats.rename(columns={col: 'away' if col == 'team' else f'away_{col}' for col in team_stats.columns}),\n",
+    "        on=['away', 'away_game_num']\n",
+    "    ).sort_values(['date', 'home_game_num'])\n",
     "\n",
-    "    games['log5'] = ((games['home_team_win_pct'] - (games['home_team_win_pct'] * games['away_team_win_pct'])) / (\n",
-    "        games['home_team_win_pct'] + games['away_team_win_pct'] - (2 * games['home_team_win_pct'] * games['away_team_win_pct'])\n",
+    "    games['log5'] = ((games['home_win_pct'] - (games['home_win_pct'] * games['away_win_pct'])) / (\n",
+    "        games['home_win_pct'] + games['away_win_pct'] - (2 * games['home_win_pct'] * games['away_win_pct'])\n",
     "    ).replace(0, 1)).astype(float)\n",
-    "    games['pythag'] = games['home_team_pythag'] - games['away_team_pythag']\n",
+    "    games['pythag'] = games['home_pythag'] - games['away_pythag']\n",
     "\n",
-    "#     games['pred_score_home'] = np.sqrt(games['home_team_avg_score_for'] * games['away_team_avg_score_against'])\n",
-    "#     games['pred_score_away'] = np.sqrt(games['away_team_avg_score_for'] * games['home_team_avg_score_against'])\n",
-    "#     games['pred_score_diff'] = games['pred_score_home'] - games['pred_score_away']\n",
-    "    games['era_diff'] = games['home_team_era'] - games['away_team_era']   \n",
-    "    return games[games['home_team_game_num'] > 10]"
+    "    #     games['pred_score_home'] = np.sqrt(games['home_avg_score_for'] * games['away_avg_score_against'])\n",
+    "    #     games['pred_score_away'] = np.sqrt(games['away_avg_score_for'] * games['home_avg_score_against'])\n",
+    "    #     games['pred_score_diff'] = games['pred_score_home'] - games['pred_score_away']\n",
+    "    games['era_diff'] = games['home_era'] - games['away_era']\n",
+    "    games['obp_diff'] = games['home_obp'] - games['away_obp']\n",
+    "    return games[games['home_game_num'] > 20]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
-   "id": "ddfc32ee",
+   "execution_count": null,
+   "id": "3114fd64",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mpark/.local/lib/python3.8/site-packages/pandas/core/arraylike.py:364: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n",
-      "/tmp/ipykernel_116/3459252499.py:12: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  train['pred'] = model.predict(train.loc[:,features])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.5588511749347258"
-      ]
-     },
-     "execution_count": 273,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "games = pd.concat([build_features(year) for year in range(2000, 2020)], ignore_index=True)\n",
-    "features = ['log5', 'pythag', 'era_diff']\n",
-    "train_size = 5000\n",
+    "features = ['log5', 'pythag', 'era_diff', 'obp_diff']\n",
+    "train_size = 20000\n",
     "\n",
     "model = LogisticRegression()\n",
     "model.fit(games.loc[:train_size, features], games.loc[:train_size, 'home_won'])\n",
@@ -185,40 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
-   "id": "b8c5586d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      13\n",
-       "1       6\n",
-       "2       7\n",
-       "3      13\n",
-       "4       7\n",
-       "       ..\n",
-       "893     6\n",
-       "894    10\n",
-       "895     9\n",
-       "896    11\n",
-       "897     7\n",
-       "Name: home_H, Length: 47057, dtype: int64"
-      ]
-     },
-     "execution_count": 278,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['home_H']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 274,
-   "id": "f9b9a79f",
+   "execution_count": 348,
+   "id": "40b010c7",
    "metadata": {},
    "outputs": [
     {
@@ -252,28 +199,28 @@
        "    <tr>\n",
        "      <th>log5</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.876045</td>\n",
-       "      <td>-0.674564</td>\n",
-       "      <td>0.112530</td>\n",
+       "      <td>0.876982</td>\n",
+       "      <td>-0.673395</td>\n",
+       "      <td>0.111548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pythag</th>\n",
-       "      <td>0.876045</td>\n",
+       "      <td>0.876982</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.738762</td>\n",
-       "      <td>0.120075</td>\n",
+       "      <td>-0.742248</td>\n",
+       "      <td>0.120623</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>era_diff</th>\n",
-       "      <td>-0.674564</td>\n",
-       "      <td>-0.738762</td>\n",
+       "      <td>-0.673395</td>\n",
+       "      <td>-0.742248</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>-0.100312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>home_won</th>\n",
-       "      <td>0.112530</td>\n",
-       "      <td>0.120075</td>\n",
+       "      <td>0.111548</td>\n",
+       "      <td>0.120623</td>\n",
        "      <td>-0.100312</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
@@ -283,13 +230,13 @@
       ],
       "text/plain": [
        "              log5    pythag  era_diff  home_won\n",
-       "log5      1.000000  0.876045 -0.674564  0.112530\n",
-       "pythag    0.876045  1.000000 -0.738762  0.120075\n",
-       "era_diff -0.674564 -0.738762  1.000000 -0.100312\n",
-       "home_won  0.112530  0.120075 -0.100312  1.000000"
+       "log5      1.000000  0.876982 -0.673395  0.111548\n",
+       "pythag    0.876982  1.000000 -0.742248  0.120623\n",
+       "era_diff -0.673395 -0.742248  1.000000 -0.100312\n",
+       "home_won  0.111548  0.120623 -0.100312  1.000000"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
