--- a/eda.ipynb
+++ b/eda.ipynb
@@ -17,8 +17,8 @@
     "offensive_stats = ['AB', 'H', '2B', '3B', 'HR', 'RBI', 'SAC', 'SAC_FLY', 'HBP', 'BB', 'IBB', 'K', 'SB', 'CS', 'GDP', 'CI', 'LOB']\n",
     "pitching_stats = ['pitchers_used', 'indv_earned_runs', 'team_earned_runs', 'wild_pitches', 'balks']\n",
     "defensive_stats = ['putouts', 'assists', 'errors', 'passed_balls', 'double_plays', 'triple_plays']\n",
-    "roles = ['home_plate_ump', '1B_ump', '2B_ump', '3B_ump', 'LF_ump', 'RF_ump', 'away_manager', 'home_manager',\n",
-    "         'winning_pitcher', 'losing_pitcher', 'saving_pitcher', 'winning_rbi_batter', 'away_starting_pitcher', 'home_starting_pitcher']\n",
+    "roles = ['home_plate_ump', '1B_ump', '2B_ump', '3B_ump', 'LF_ump', 'RF_ump', 'away_manager', 'home_manager', 'winning_pitcher',\n",
+    "         'losing_pitcher', 'saving_pitcher', 'winning_rbi_batter', 'away_starting_pitcher', 'home_starting_pitcher']\n",
     "columns = [\n",
     "    'date',\n",
     "    'series_game_num',\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 592,
    "id": "9c576a8f",
    "metadata": {},
    "outputs": [],
@@ -92,28 +92,38 @@
     "        side_games['score_against'] = one_year[f'score_{opposite_side(side)}']\n",
     "        for stat in offensive_stats + defensive_stats + pitching_stats:\n",
     "            side_games[stat] = one_year[f'{side}_{stat}']\n",
+    "            side_games[f'opponent_{stat}'] = one_year[f'{opposite_side(side)}_{stat}']\n",
     "        side_games_dfs.append(side_games)\n",
     "\n",
     "    team_games = pd.concat(side_games_dfs).sort_values(['team', 'game_num'])\n",
-    "    stacked = {col: team_games.pivot(columns='team', values=col, index='game_num') for col in team_games.columns}\n",
+    "    stacked = {col: team_games.pivot(columns='team', values=col, index='game_num').cumsum()\n",
+    "               for col in list(team_games.select_dtypes(include=[np.number, bool]).columns)}\n",
     "    game_num = stacked['won'].index.values - 1\n",
     "\n",
-    "    team_wins = stacked['won'].cumsum().divide(game_num, axis='rows').unstack().rename('win_pct')\n",
+    "    team_wins = stacked['won'].divide(game_num, axis='rows').unstack().rename('win_pct')\n",
     "\n",
-    "    team_runs_for = stacked['score_for'].cumsum()\n",
+    "    team_runs_for = stacked['score_for']\n",
     "    team_avg_score_for = team_runs_for.divide(game_num, axis='rows').unstack().rename('avg_score_for')\n",
     "\n",
-    "    team_runs_against = stacked['score_against'].cumsum()\n",
+    "    team_runs_against = stacked['score_against']\n",
     "    team_avg_score_against = team_runs_against.divide(game_num, axis='rows').unstack().rename('avg_score_against')\n",
     "\n",
-    "    team_era = team_runs_against.divide(game_num, axis='rows').unstack().rename('era')\n",
-    "    team_obp = ((stacked['H'].cumsum() + stacked['BB'].cumsum() + stacked['HBP'].cumsum()) / (\n",
-    "        stacked['AB'].cumsum() + stacked['BB'].cumsum() + stacked['HBP'].cumsum() + stacked['SAC_FLY'].cumsum())\n",
+    "    team_era = stacked['indv_earned_runs'].divide(game_num, axis='rows').unstack().rename('era')\n",
+    "    team_whip = (stacked['opponent_H'] + stacked['opponent_BB']).divide(game_num * 9, axis='rows').unstack().rename('whip')\n",
+    "    team_fip = (stacked['opponent_HR'] * 13 + stacked['opponent_BB'] * 3 - stacked['opponent_K'] * 2).divide(\n",
+    "        game_num * 9, axis='rows').unstack().rename('fip')\n",
+    "    team_obp = ((stacked['H'] + stacked['BB'] + stacked['HBP']) / (\n",
+    "        stacked['AB'] + stacked['BB'] + stacked['HBP'] + stacked['SAC_FLY'])\n",
     "    ).unstack().rename('obp')\n",
     "    \n",
+    "    singles = stacked['H'] - stacked['HR'] - stacked['3B'] - stacked['2B']\n",
+    "    team_slg = ((singles + 2 * stacked['2B'] + 3 * stacked['3B'] + 4 * stacked['HR'])\n",
+    "        / stacked['AB']).unstack().rename('slg')\n",
+    "    \n",
+    "    team_err = stacked['errors'].divide(game_num, axis='rows').unstack().rename('err')\n",
     "    team_pythag = (team_runs_for**1.83 / (team_runs_for**1.83 + team_runs_against**1.83)).unstack().rename('pythag')\n",
     "    team_stats = pd.concat([\n",
-    "        team_wins, team_avg_score_for, team_avg_score_against, team_era, team_obp, team_pythag\n",
+    "        team_wins, team_avg_score_for, team_avg_score_against, team_era, team_whip, team_obp, team_slg, team_err, team_fip, team_pythag\n",
     "    ], axis='columns').reset_index()\n",
     "\n",
     "    tmp = pd.merge(\n",
@@ -136,36 +146,64 @@
     "    #     games['pred_score_away'] = np.sqrt(games['away_avg_score_for'] * games['home_avg_score_against'])\n",
     "    #     games['pred_score_diff'] = games['pred_score_home'] - games['pred_score_away']\n",
     "    games['era_diff'] = games['home_era'] - games['away_era']\n",
+    "    games['whip_diff'] = games['home_whip'] - games['away_whip']\n",
     "    games['obp_diff'] = games['home_obp'] - games['away_obp']\n",
-    "    return games[games['home_game_num'] > 20]"
+    "    games['slg_diff'] = games['home_slg'] - games['away_slg']\n",
+    "    games['ops_diff'] = games['home_slg'] + games['home_obp'] - games['away_slg'] - games['away_obp']\n",
+    "    games['err_diff'] = games['home_err'] - games['away_err']\n",
+    "    games['fip_diff'] = games['home_fip'] - games['away_fip']\n",
+    "    return games[games['home_game_num'] > 40]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3114fd64",
+   "execution_count": 593,
+   "id": "45052775",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "games = pd.concat([build_features(year) for year in range(2000, 2020)], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 602,
+   "id": "f2b600b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5639255581123087"
+      ]
+     },
+     "execution_count": 602,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "games = pd.concat([build_features(year) for year in range(2000, 2020)], ignore_index=True)\n",
-    "features = ['log5', 'pythag', 'era_diff', 'obp_diff']\n",
-    "train_size = 20000\n",
+    "features_list = ['log5', 'pythag', 'era_diff', 'whip_diff', 'ops_diff', 'err_diff', 'fip_diff']\n",
+    "train_size = 10000\n",
     "\n",
     "model = LogisticRegression()\n",
-    "model.fit(games.loc[:train_size, features], games.loc[:train_size, 'home_won'])\n",
+    "features = games[features_list]\n",
+    "features = (features - features.mean()) / features.std()\n",
     "\n",
-    "train = games.loc[train_size + 1 : games.shape[0] + 1]\n",
-    "train['pred'] = model.predict(train.loc[:,features])\n",
-    "(train['pred'] == train['home_won']).sum() / train.shape[0] "
+    "model.fit(features.loc[:train_size,], games.loc[:train_size, 'home_won'])\n",
+    "\n",
+    "test = games.loc[(train_size + 1):, ['home_won']]\n",
+    "test['pred'] = model.predict(features.loc[(train_size + 1):,])\n",
+    "(test['pred'] == test['home_won']).sum() / test.shape[0] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
-   "id": "40b010c7",
+   "execution_count": 595,
+   "id": "02f1fcfe",
    "metadata": {},
    "outputs": [
     {
@@ -192,6 +230,10 @@
        "      <th>log5</th>\n",
        "      <th>pythag</th>\n",
        "      <th>era_diff</th>\n",
+       "      <th>whip_diff</th>\n",
+       "      <th>ops_diff</th>\n",
+       "      <th>err_diff</th>\n",
+       "      <th>fip_diff</th>\n",
        "      <th>home_won</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -199,29 +241,89 @@
        "    <tr>\n",
        "      <th>log5</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.876982</td>\n",
-       "      <td>-0.673395</td>\n",
-       "      <td>0.111548</td>\n",
+       "      <td>0.903443</td>\n",
+       "      <td>-0.696410</td>\n",
+       "      <td>-0.662497</td>\n",
+       "      <td>0.580960</td>\n",
+       "      <td>-0.325912</td>\n",
+       "      <td>-0.596195</td>\n",
+       "      <td>0.130224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pythag</th>\n",
-       "      <td>0.876982</td>\n",
+       "      <td>0.903443</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.742248</td>\n",
-       "      <td>0.120623</td>\n",
+       "      <td>-0.740341</td>\n",
+       "      <td>-0.697123</td>\n",
+       "      <td>0.644417</td>\n",
+       "      <td>-0.347486</td>\n",
+       "      <td>-0.627708</td>\n",
+       "      <td>0.136310</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>era_diff</th>\n",
-       "      <td>-0.673395</td>\n",
-       "      <td>-0.742248</td>\n",
+       "      <td>-0.696410</td>\n",
+       "      <td>-0.740341</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.100312</td>\n",
+       "      <td>0.891257</td>\n",
+       "      <td>-0.051089</td>\n",
+       "      <td>0.241460</td>\n",
+       "      <td>0.795609</td>\n",
+       "      <td>-0.109105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>whip_diff</th>\n",
+       "      <td>-0.662497</td>\n",
+       "      <td>-0.697123</td>\n",
+       "      <td>0.891257</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.096343</td>\n",
+       "      <td>0.294747</td>\n",
+       "      <td>0.762372</td>\n",
+       "      <td>-0.112626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ops_diff</th>\n",
+       "      <td>0.580960</td>\n",
+       "      <td>0.644417</td>\n",
+       "      <td>-0.051089</td>\n",
+       "      <td>-0.096343</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.157391</td>\n",
+       "      <td>-0.127893</td>\n",
+       "      <td>0.085264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>err_diff</th>\n",
+       "      <td>-0.325912</td>\n",
+       "      <td>-0.347486</td>\n",
+       "      <td>0.241460</td>\n",
+       "      <td>0.294747</td>\n",
+       "      <td>-0.157391</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.177711</td>\n",
+       "      <td>-0.055521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fip_diff</th>\n",
+       "      <td>-0.596195</td>\n",
+       "      <td>-0.627708</td>\n",
+       "      <td>0.795609</td>\n",
+       "      <td>0.762372</td>\n",
+       "      <td>-0.127893</td>\n",
+       "      <td>0.177711</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.109068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>home_won</th>\n",
-       "      <td>0.111548</td>\n",
-       "      <td>0.120623</td>\n",
-       "      <td>-0.100312</td>\n",
+       "      <td>0.130224</td>\n",
+       "      <td>0.136310</td>\n",
+       "      <td>-0.109105</td>\n",
+       "      <td>-0.112626</td>\n",
+       "      <td>0.085264</td>\n",
+       "      <td>-0.055521</td>\n",
+       "      <td>-0.109068</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -229,20 +331,34 @@
        "</div>"
       ],
       "text/plain": [
-       "              log5    pythag  era_diff  home_won\n",
-       "log5      1.000000  0.876982 -0.673395  0.111548\n",
-       "pythag    0.876982  1.000000 -0.742248  0.120623\n",
-       "era_diff -0.673395 -0.742248  1.000000 -0.100312\n",
-       "home_won  0.111548  0.120623 -0.100312  1.000000"
+       "               log5    pythag  era_diff  whip_diff  ops_diff  err_diff  \\\n",
+       "log5       1.000000  0.903443 -0.696410  -0.662497  0.580960 -0.325912   \n",
+       "pythag     0.903443  1.000000 -0.740341  -0.697123  0.644417 -0.347486   \n",
+       "era_diff  -0.696410 -0.740341  1.000000   0.891257 -0.051089  0.241460   \n",
+       "whip_diff -0.662497 -0.697123  0.891257   1.000000 -0.096343  0.294747   \n",
+       "ops_diff   0.580960  0.644417 -0.051089  -0.096343  1.000000 -0.157391   \n",
+       "err_diff  -0.325912 -0.347486  0.241460   0.294747 -0.157391  1.000000   \n",
+       "fip_diff  -0.596195 -0.627708  0.795609   0.762372 -0.127893  0.177711   \n",
+       "home_won   0.130224  0.136310 -0.109105  -0.112626  0.085264 -0.055521   \n",
+       "\n",
+       "           fip_diff  home_won  \n",
+       "log5      -0.596195  0.130224  \n",
+       "pythag    -0.627708  0.136310  \n",
+       "era_diff   0.795609 -0.109105  \n",
+       "whip_diff  0.762372 -0.112626  \n",
+       "ops_diff  -0.127893  0.085264  \n",
+       "err_diff   0.177711 -0.055521  \n",
+       "fip_diff   1.000000 -0.109068  \n",
+       "home_won  -0.109068  1.000000  "
       ]
      },
-     "execution_count": 348,
+     "execution_count": 595,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "games[features + ['home_won']].corr()"
+    "games[features_list + ['home_won']].corr()"
    ]
   },
   {
